Added arduino mega and esp32 to fqbn list

--- a/.github/workflows/arduino_quality_check.yml
+++ b/.github/workflows/arduino_quality_check.yml
@@ -12,5 +12,5 @@ jobs:
     with:
       expect-arduino-examples: true
       lint-lib-manager-check: submit
-
-  
+      fqbn-list: "['arduino:avr:mega','esp32:esp32:esp32']"
+      dependency-list: "auto"  
