--- a/.github/workflows/arduino_quality_check.yml
+++ b/.github/workflows/arduino_quality_check.yml
@@ -7,8 +7,8 @@ on:
       - main
 
 jobs:
-  arduino-quality:
-    uses: sensirion/.github/.github/workflows/driver.arduino.check.yml@main
+  arduino-check:
+    uses: sensirion/.github/.github/workflows/shared.arduino.check.yml@main
     with:
       expect-arduino-examples: true
       lint-lib-manager-check: submit
