--- a/.github/workflows/arduino_quality_check.yml
+++ b/.github/workflows/arduino_quality_check.yml
@@ -7,10 +7,10 @@ on:
       - main
 
 jobs:
-  arduino-check:
-    uses: sensirion/.github/.github/workflows/shared.arduino.check.yml@main
+  arduino-quality:
+    uses: sensirion/.github/.github/workflows/driver.uart.arduino.check.yml@main
     with:
       expect-arduino-examples: true
-      lint-lib-manager-check: submit
-      fqbn-list: "['arduino:avr:mega','esp32:esp32:esp32']"
-      dependency-list: "auto"  
+      lint-lib-manager-check: update
+
+  
